 2003-03-18 Al Riddoch <alriddoch@zepler.org>,
    - Increment API to version 0.3, and reset interface version, so
      this version can co-exist with 0.2.x
 2003-03-16 Al Riddoch <alriddoch@zepler.org>,
    - skstream.cpp: Fix problem with virtual method being called
      after destructor.
 2003-03-14 Al Riddoch <alriddoch@zepler.org>,
    - skstream.h, skstream.cpp: Re-work sockbuf class so it is
      not specific to any one type of socket. Remove inet
      functionality from base classes. Derive new buffer
      classes for stream and datagram sockets, and use
      stream version in current socket classes. This should
      be considered work in progress. Do not port your code.
 2003-01-31 Al Riddoch <alriddoch@zepler.org>,
    - Convert to using pkg-config
 12/09/2002 Ron Steinke <rsteinke@w-link.net>,
    - created basic_socket, a virtual base class
      for basic_socket_stream and basic_socket_server,
      so that the polling code has a common base
      with getSocket() to access
    - created basic_socket_poll polling class
    - changed tcp_socket_stream::is_ready() to isReady()
      to match standards for function naming, left is_ready()
      as a wrapper of isReady() for compatibility
 2002-11-04 Al Riddoch <alriddoch@zepler.org>,
    - Add doxygen docs.
 20/28/2002 Michael Koch <konqueror@gmx.de>
    - Added support for GNU/Hurd.
    - Added man page for skstream-config.
    - Added support for NOCONFIGURE in autogen.sh
 10/14/2002 Malcolm Walker <malcolm@worldforge.org>
    - Added call to Sleep(0) in win32 nonblocking connect
 07/22/2002 Ron Steinke <rsteinke@w-link.net>,
    - changed sizeof(sockaddr) to sizeof(sockaddr_in) in
      several locations, so that we pass the correct size
      of in_peer and out_peer in socketbuf
    - reordered initializers in socketbuf constructors
      to match their declaration order in the class
 07/21/2002 Al Riddoch <alriddoch@zepler.org>,
    - configure.in: Added --enable-debug option for debug build,